--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ document.getElementById("daftarForm").addEventListener("submit", function(e) {
   };
 
   // GANTI dengan URL Web App Google Script anda di sini:
-  const scriptURL = "https://script.google.com/macros/s/PASTE_URL_DI_SINI/exec";
+  const scriptURL = "https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbzJJmNgpvl2iW1qYTTDjEUaltoi9uaOB77s15vm5YSs-cf1257w8ZkFT7xzgwi0KpOv/exec/exec";
 
   fetch(scriptURL, {
     method: "POST",
