--- a/index.html
+++ b/index.html
@@ -51,23 +51,28 @@
 </div>
 
 <script type="module">
-  // Import the functions you need from the Firebase SDKs
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
-  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
+  // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
 
-  // TODO: Gantikan dengan konfigurasi Firebase projek anda sendiri
-  const firebaseConfig = {
-    apiKey: "Ganti_Dengan_YOUR_API_KEY",
-    authDomain: "Ganti_Dengan_YOUR_AUTH_DOMAIN",
-    projectId: "Ganti_Dengan_YOUR_PROJECT_ID",
-    storageBucket: "Ganti_Dengan_YOUR_STORAGE_BUCKET",
-    messagingSenderId: "Ganti_Dengan_YOUR_MESSAGING_SENDER_ID",
-    appId: "Ganti_Dengan_YOUR_APP_ID"
-  };
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyD1fVKfyowWOeVYkh1bKLDcYsV6kjtZPvY",
+  authDomain: "pendaftarankursus2025.firebaseapp.com",
+  databaseURL: "https://pendaftarankursus2025-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "pendaftarankursus2025",
+  storageBucket: "pendaftarankursus2025.firebasestorage.app",
+  messagingSenderId: "539121106475",
+  appId: "1:539121106475:web:a53faf435485ce5df0f46e",
+  measurementId: "G-LE23RKPHXT"
+};
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const db = getFirestore(app);
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
 
   let kursusCount = 1;
   const maxKursus = 5;
