--- a/index.html
+++ b/index.html
@@ -51,40 +51,35 @@
 </div>
 
 <script type="module">
-  // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
+  // Import the functions you need from the Firebase SDKs
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-app.js";
+  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.4.0/firebase-firestore.js";
 
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyD1fVKfyowWOeVYkh1bKLDcYsV6kjtZPvY",
-  authDomain: "pendaftarankursus2025.firebaseapp.com",
-  databaseURL: "https://pendaftarankursus2025-default-rtdb.asia-southeast1.firebasedatabase.app",
-  projectId: "pendaftarankursus2025",
-  storageBucket: "pendaftarankursus2025.firebasestorage.app",
-  messagingSenderId: "539121106475",
-  appId: "1:539121106475:web:a53faf435485ce5df0f46e",
-  measurementId: "G-LE23RKPHXT"
-};
+  // TODO: Gantikan dengan konfigurasi Firebase projek anda sendiri
+  const firebaseConfig = {
+    apiKey: "Ganti_Dengan_YOUR_API_KEY",
+    authDomain: "Ganti_Dengan_YOUR_AUTH_DOMAIN",
+    projectId: "Ganti_Dengan_YOUR_PROJECT_ID",
+    storageBucket: "Ganti_Dengan_YOUR_STORAGE_BUCKET",
+    messagingSenderId: "Ganti_Dengan_YOUR_MESSAGING_SENDER_ID",
+    appId: "Ganti_Dengan_YOUR_APP_ID"
+  };
 
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
 
   let kursusCount = 1;
   const maxKursus = 5;
 
-  window.tambahKursus = function() { // Gunakan window.tambahKursus agar dapat diakses dari onclick HTML
+  window.tambahKursus = function() {
     if (kursusCount >= maxKursus) return alert("Maksimum 5 kursus sahaja.");
     const container = document.getElementById("kursusContainer");
     const input = document.createElement("input");
     input.type = "text";
     input.name = "kursus[]";
     input.placeholder = `Kod & Nama Kursus ${kursusCount + 1}`;
-    input.required = true; // Tambah required attribute
+    input.required = true;
     container.appendChild(input);
     kursusCount++;
   }
@@ -103,11 +98,11 @@ const analytics = getAnalytics(app);
       notel: form.notel.value,
       emel: form.emel.value,
       alamat: form.alamat.value,
-      kursus: Array.from(form.querySelectorAll('input[name="kursus[]"]')).map(i => i.value).filter(value => value.trim() !== '').slice(0, 5), // Pastikan kursus yang kosong tidak dihantar
-      };
+      kursus: Array.from(form.querySelectorAll('input[name="kursus[]"]')).map(i => i.value).filter(value => value.trim() !== '').slice(0, 5),
+      tarikhHantar: new Date()
+    };
 
     try {
-      // Tambah dokumen baru ke koleksi 'pendaftaran_kursus'
       const docRef = await addDoc(collection(db, "pendaftaran_kursus"), data);
       
       statusElement.innerText = "Pendaftaran berjaya dihantar!";
@@ -115,7 +110,6 @@ const analytics = getAnalytics(app);
       kursusCount = 1;
       document.getElementById("kursusContainer").innerHTML = '<input type="text" name="kursus[]" placeholder="Kod & Nama Kursus 1" required>';
 
-      // Papar semula data
       document.getElementById("outNama").innerText = data.nama;
       document.getElementById("outMatrik").innerText = data.matrik;
       document.getElementById("outNoKP").innerText = data.nokp;
@@ -125,7 +119,7 @@ const analytics = getAnalytics(app);
 
       const kursusList = document.getElementById("outKursus");
       kursusList.innerHTML = "";
-      data.kursus.forEach(k => { // Gunakan data.kursus yang telah difilter
+      data.kursus.forEach(k => {
         const li = document.createElement("li");
         li.innerText = k;
         kursusList.appendChild(li);
