--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 
   // TODO: Gantikan dengan konfigurasi Firebase projek anda sendiri
   const firebaseConfig = {
-    apiKey: "Ganti_Dengan_YOUR_API_KEY",
-    authDomain: "Ganti_Dengan_YOUR_AUTH_DOMAIN",
-    projectId: "Ganti_Dengan_YOUR_PROJECT_ID",
-    storageBucket: "Ganti_Dengan_YOUR_STORAGE_BUCKET",
-    messagingSenderId: "Ganti_Dengan_YOUR_MESSAGING_SENDER_ID",
-    appId: "Ganti_Dengan_YOUR_APP_ID"
+    apiKey: "AIzaSyD1fVKfyowWOeVYkh1bKLDcYsV6kjtZPvY",
+    authDomain: "pendaftarankursus2025.firebaseapp.com",
+    projectId: "pendaftarankursus2025",
+    storageBucket: "pendaftarankursus2025.firebasestorage.app",
+    messagingSenderId: "539121106475",
+    appId: "1:539121106475:web:a53faf435485ce5df0f46e"
   };
 
   // Initialize Firebase
